--- a/index.html
+++ b/index.html
@@ -1,22 +1,42 @@
-# gillsanjam.github.io
 <!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Spin-off of "Project: All about Volleyball"</title>
+        <title>Spin-off of "Project: Travel webpage"</title>
     </head>
+    <style>
+        body {
+            background-color:pink;
+        }
+        h2 {
+            color:white;
+        }
+        h1 {
+            color:white;
+        }
+    </style>
     <body>
     
         <h1>All about Volleyball!</h1>
         <h2>What is Volleyball?</h2>
-        <p>Volleyball is a team sport that was first played in 1895 in Holyoke, Massachusetts, United States. In volleyball, there are 2 teams that are separated by a net in the middle of the court. Each team tries to score points by grounding a ball on the other team's court.<p>
+        <p>Volleyball is a team sport that was first played in 1895 in Holyoke, Massachusetts, United States. In volleyball, there are 2 teams that are separated by a net in the middle of the court. Each team tries to score points by <strong>grounding</strong> a ball on the other team's court.<p>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/90/Volleyball_pano_IMG_0658.JPG/440px-Volleyball_pano_IMG_0658.JPG">
         
     <h2> Rules</h2>
     <p>Here are some basic rules to follow when playing volleyball... </p>
-    <p> 6 players on a team, 3 on the front row and 3 on the back row.<br>
-    Maximum of three hits per side.<br>
-    A player CANNOT hit the ball 2 times in a row.<br>
-    Ball may be played off the net during a volley and on a serve.<br>
-    The ball hitting a boundary line is "in".<br></p>
+  <p> - 6 players on a team, 3 on the front row and 3 on the back row.<br>
+    - Maximum of three hits per side.<br>
+    - A player <strong>CANNOT</strong> hit the ball 2 times in a row.<br>
+    - Ball may be played off the net during a volley and on a serve.<br>
+    - The ball hitting a boundary line is "in".<br>
+        - Call "mine" when going for the ball, even when it seems obvious<br>
+        - Have fun!<br>
+    </p>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/bf/Algeria_and_Japan_women%27s_national_volleyball_team_at_the_2012_Summer_Olympics_%287913959028%29.jpg/260px-Algeria_and_Japan_women%27s_national_volleyball_team_at_the_2012_Summer_Olympics_%287913959028%29.jpg">
+    <h2>Equipment</h2>
+    <p> In volleyall, there isn't a lot of equipment needed. All you need is a volleyball, a net, and proper shoes to play in. If you dive a lot in volleyball, I recommend getting knee and shoulder pads so you don't hurt yourself in a game!</p>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/86/Mesa_de_anotadores_de_voleibol.jpg/220px-Mesa_de_anotadores_de_voleibol.jpg"><br>
+    <h2> HAVE FUN PLAYING VOLLEYBALL!</h2>
+    <p> I hope my webpage encourages you to play volleyball! Have fun!
     </body>
 </html>
